# preprints_recommender

./: .gitignore  README.md  py_error_log.txt  pyproject.toml  setup.py  update_user_recs_backup.py
paper/: main.md
src/: discipline_dissimilarity_matrix.csv  pw_file.py  py_error_log.txt  update_user_recs_urssi.py  user_profile.py
src/outputs/: recommendations_2024-06-26 19:54:38.json
src/preprint_scout/: __init__.py  arxiv_articles.py  embedding.py  llms.py  osf_articles.py  philarchive_articles.py  py_error_log.txt  recommender_main.py  requirements.txt  user_profile.py  user_profile.txt
src/preprint_scout/outputs/: recommendations_2024-06-26 21:58:38.json  recommendations_2024-06-29 13:04:29.json  recommendations_2024-06-29 13:23:09.json  recommendations_2024-06-29 13:34:37.json
src/preprint_scout/resources/: schema_mapping_cleaned.csv
src/preprintscout/: __init__.py  llms.py  philarchive_articles.py  pps.py  requirements.txt
src/preprintscout/resources/: arxiv_taxonomy.csv
test/: test_recommendation_main.py  test_update_user.py
