[project]
name = "PreprintScout"
version = "0.1.1"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ryan Watkins" }]
dependencies = [
"arxiv>=2.1.3",
"beautifulsoup4>=4.12.3",
"langdetect>=1.0.9",
"openai>=1.35.7",
"pandas>=2.2.2",
"pytz>=2024.1",
"Requests>=2.32.3",
"retry>=0.9.2",
"scikit_learn>=1.4.2",
]

[project.urls]
Homepage = "https://github.com/ryanrwatkins/preprints_recommender"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "preprint_scout", ".."
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
